upgraded to Java 9, needed small fix for figwheel